--- a/src/app/pages/phones/preaching/preaching.component.html
+++ b/src/app/pages/phones/preaching/preaching.component.html
@@ -24,11 +24,11 @@
         <nb-card>
             <nb-card-header>
                 <nb-icon icon="info"></nb-icon>
-                <strong>Apagar Usuário</strong>
+                <strong>Apagar Contato</strong>
             </nb-card-header>
             <nb-card-body class="fundo">
                 <p>
-                    Tem certeza que deseja remover o usuário<br> de <strong>ID {{ data }}</strong>?
+                    Tem certeza que deseja remover o contato<br> do <strong>telefone {{ data }}</strong>?
                 </p>
             </nb-card-body>
             <nb-card-footer>
