Ajustes no header

--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -14,7 +14,7 @@
         </div>
     </div>
 
-    <div class="header-container user">
+    <div class="header-container user {{getSearchService().active ? 'search' : ''}}">
         <a (click)="navigateHelp()" href="#" class="help">
             <nb-icon icon="question-mark-circle"></nb-icon>
         </a>
