--- a/src/app/@theme/styles/designsytem.css
+++ b/src/app/@theme/styles/designsytem.css
@@ -2230,12 +2230,17 @@ ng2-smart-table thead * {
     nb-card {
         font-size: 14px !important;
     }
+
     .h-menu .user .name {
         margin-left: 15px;
+        padding-left: 15px;
+    }
+
+    .h-menu .search .user .name {
         padding-left: 0;
     }
 
-    .h-menu .user .user-name {
+    .h-menu .search .user .user-name {
         display: none;
     }
 
@@ -2251,15 +2256,20 @@ ng2-smart-table thead * {
         font-size: 12px !important;
     }
 
-    .h-menu .help {
+    .h-menu .search .help {
         display: none !important;
     }
 
-    .h-menu .user-container::after {
+    .h-menu .search .user-container::after {
         right: -15px;
     }
 
-    .h-menu .user .name {
+    .h-menu .user .user-name {
+        margin-top: 3px;
+        min-width: 60px
+    }
+
+    .h-menu .search .user .name {
         margin-left: 0;
         border-left: 0 none;
         padding-right: 30px;
