Mostrando lixeira mesmo quando há revisitas

--- a/src/app/@theme/styles/_overrides.scss
+++ b/src/app/@theme/styles/_overrides.scss
@@ -356,7 +356,7 @@
                     text-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
                 }
                 .delete {
-                    display: none !important;
+                    opacity: 0.2;
                 }
             }
             .icon-big {
