--- a/src/app/pages/phones/new/new.component.scss
+++ b/src/app/pages/phones/new/new.component.scss
@@ -2,7 +2,7 @@
     margin: 10px 10px 20px;
     padding: 5px 20px;
     background-color: rgba(0, 0, 0, 0.1);
-    border: 1px solid #0000004d;
+    border: 1px solid rgba(0, 0, 0, 0.3);
     border-radius: 5px;
 
     p {
