Adicionado dia da semana

--- a/src/app/@theme/styles/_overrides.scss
+++ b/src/app/@theme/styles/_overrides.scss
@@ -18,6 +18,9 @@
         &:last-child {
             margin-bottom: 0 !important;
         }
+        &.card_pai {
+            margin-bottom: 5rem !important;
+        }
     }
     // Login
     .login-content {
